# PyHDLio-dev

./: .flake8  .gitignore  .gitmodules  COPYRIGHT  LANGUAGE_VERSION_FIXTURES_STATUS.md  LICENSE  LICENSES.md  LICENSE_HEADER.txt  README.md  SETUP.md  SYSTEMVERILOG_ASSESSMENT_FINAL.md  SYSTEMVERILOG_COMPLETION_REPORT.md  check_pep8.py  pyhdlio-workspace.code-workspace  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup_dev_env.py  setup_env.py  simple.py  systemverilog_improvement_plan.md  test_comprehensive.py  test_comprehensive_vhdl.py  test_current_implementation.py  test_entity_only.py  test_simple_verilog.v  test_unified_parser.py  test_vhdl_parser.py
doc/: plan_1.md  plan_2.md
doc/dev/: CAMELCASE_CONVERSION_SUMMARY.md  DIRECTORY_REORGANIZATION_SUMMARY.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  FINAL_VERILOG_STATUS.md  LICENSING_SUMMARY.md  PARSER_CONSOLIDATION_SUMMARY.md  PARSER_LOCATION_CORRECTION.md  PORT_GROUPING_SUMMARY.md  README.md  REAL_WORLD_TESTING_RESULTS.md  REPOSITORY_PARTITIONING_SUMMARY.md  START_HERE_SUBMODULE_INTEGRATION.md  SUBMODULE_CONFIGURATION_SUMMARY.md  SUBMODULE_INTEGRATION_SUMMARY.md  TESTING_SUMMARY.md  TEST_PROJECTS_PLAN.md  TEST_RATIONALIZATION_SUMMARY.md  UNIFIED_PARSER_SUMMARY.md  VERILOG_DIRECTORY_FLATTENING_SUMMARY.md  VERILOG_PARSER_COMPLETION_SUMMARY.md  VERILOG_TEST_SETUP_SUMMARY.md
tests/: README.md  __init__.py  conftest.py  run_tests.py
tests/fixtures/: fifo_uvm_test.sv  simple_entity.vhd  simple_module.v  simple_systemverilog.sv  systemverilog_2009.sv  systemverilog_2017.sv  (+6 more)
tools/: antlr4.bat
(+29 files in other folders)
